[tool.poetry]
name = "paper_water_penetration"
version = "0.1.0"
description = "Code for measuring the penetration behavior of water through paper"
authors = ["Anne-Marie Kröher <Amkroeher@gmail.com>","Luisa Schueller <Luisa.schueller@gmx.de>", "Peter Krutzke <Krutzkepeter@gmail.com>", "Robert Unger <r.unger@online.de>"]
maintainers = ["Robert Unger <r.unger@online.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.8.1"
numpy = "^1.22.4"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "src:main"
