[tool.poetry]
name = "paper_water_penetration"
version = "0.8.0"
description = "Code for measuring the penetration behavior of water through paper"
authors = ["Anne-Marie Kröher <Amkroeher@gmail.com>","Luisa Schueller <Luisa.schueller@gmx.de>", "Peter Krutzke <Krutzkepeter@gmail.com>", "Robert Unger <r.unger@online.de>"]
maintainers = ["Robert Unger <r.unger@online.de>"]
license = "MIT"
packages = [{include="paper_water_penetration"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.8.1"
opencv-python = "^4.6.0"
notebook = "^6.4.12"
seaborn = "^0.11.2"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
script = "paper_water_penetration.run:start"
wait_script = "paper_water_penetration.run:wait_script"
capture = "paper_water_penetration.run:capture"
wait_capture = "paper_water_penetration.run:wait_capture"
